# zlink

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: lib.rs
heapfull/: Cargo.toml  README.md
heapfull/src/: lib.rs
zarlink/: Cargo.toml
zarlink-tokio/: Cargo.toml
zarlink-tokio/examples/: resolved.rs
zarlink-tokio/src/: lib.rs
zarlink-tokio/src/unix/: mod.rs
zarlink/src/: error.rs  lib.rs
zarlink/src/connection/: mod.rs  socket.rs
zlink/: Cargo.toml
zlink-codegen/: Cargo.toml
zlink-codegen/src/: cli.rs  codegen.rs  error.rs  lib.rs  main.rs
zlink-codegen/test-integration/: Cargo.toml  build.rs  calc.idl  camelcase.idl  storage.idl  test.idl
zlink-codegen/test-integration/src/: lib.rs  main.rs
zlink-codegen/tests/: codegen.rs  integration.rs
zlink-core/: Cargo.toml
zlink-core/src/: error.rs  lib.rs  log.rs  proxy.rs  reply.rs
zlink-core/src/call/: de.rs  mod.rs  ser.rs  tests.rs
zlink-core/src/connection/: chain.rs  mod.rs  read_connection.rs  socket.rs  write_connection.rs
zlink-core/src/connection/chain/: mod.rs  reply_stream.rs
zlink-core/src/idl/: comment.rs  custom_enum.rs  custom_object.rs  custom_type.rs  enum_variant.rs  error.rs  field.rs  interface.rs  list.rs  member.rs  method.rs  mod.rs  parse.rs  reply_error.rs  reply_errors.rs  traits.rs  type_info.rs  types.rs
zlink-core/src/idl/custom/: enum.rs  mod.rs  object.rs  type.rs  type_info.rs
zlink-core/src/idl/parse/: mod.rs  tests.rs
zlink-core/src/idl/type/: mod.rs  type_ref.rs
zlink-core/src/introspect/: custom_type.rs  mod.rs  reply_error.rs  type.rs
zlink-core/src/introspect/custom/: mod.rs  type.rs
zlink-core/src/introspect/type/: collections.rs  external.rs  impls.rs  macros.rs  mod.rs  primitives.rs  special.rs  tests.rs  wrappers.rs
zlink-core/src/introspect/type/impls/: collections.rs  external.rs  primitives.rs  special.rs  wrappers.rs
zlink-core/src/proxy/: method.rs  mod.rs  reply_stream.rs
zlink-core/src/server/: listener.rs  mod.rs  select_all.rs  service.rs
zlink-core/src/test_utils/: mock_socket.rs  mod.rs
zlink-core/src/varlink_service/: api.rs  error.rs  info.rs  interface_description.rs  mod.rs  proxy.rs  reply.rs
zlink-macros/: Cargo.toml
zlink-macros/src/: custom_type.rs  custom_type_info.rs  lib.rs  proxy.rs  reply_error.rs  type.rs  type_info.rs  utils.rs
zlink-macros/src/introspect/: custom_type.rs  mod.rs  reply_error.rs  shared.rs  type.rs
zlink-macros/src/proxy/: chain_extension.rs  chain_method.rs  method_impl.rs  types.rs  utils.rs
zlink-macros/tests/: custom_type_derive.rs  custom_type_info_derive.rs  doc_comments.rs  enum_errors.rs  introspect-type.rs  lifetime_removal.rs  proxy.rs  proxy_crate_attr.rs  reply-error-derive.rs  reply-error-empty.rs  reply-error-simple.rs  reply_error_derive.rs  tuple_variant_errors.rs  type_derive.rs  type_info_derive.rs
zlink-macros/tests/proxy/: basic.rs  complex_lifetimes.rs  generics.rs  lifetimes.rs  optional_params.rs  rename.rs  streaming.rs
zlink-micro/: Cargo.toml
zlink-micro/src/: lib.rs
zlink-tokio/: Cargo.toml
zlink-tokio/examples/: resolved.rs
zlink-tokio/src/: lib.rs  notified.rs
zlink-tokio/src/unix/: listener.rs  mod.rs  stream.rs
zlink-tokio/tests/: lowlevel-ftl.rs
zlink-usb/: Cargo.toml
zlink-usb/src/: lib.rs
zlink/examples/: README.md  resolved.rs  varlink-inspect.rs
zlink/src/: error.rs  lib.rs
zlink/src/connection/: call.rs  mod.rs  read_connection.rs  reply.rs  socket.rs  write_connection.rs
zlink/src/server/: method_stream.rs  mod.rs  select_all.rs  service.rs
zlink/tests/: integration_test_custom_type.rs  integration_test_custom_type_derive.rs  integration_test_custom_typeinfo.rs  integration_test_custom_typeinfo_derive.rs  integration_test_type.rs  integration_test_typeinfo.rs  lowlevel-ftl.rs  machined_proxy_e2e.rs  mock_machined_service.rs  systemd_machined_proxy_e2e.rs  varlink_service_proxy_e2e.rs
