[workspace]
members = [
    "zlink-core",
    "zlink-codegen",
    "zlink-tokio",
    "zlink-macros",
    "zlink-usb",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/zeenix/zlink/"

[profile.bench]
debug = true
strip = "none"
