[workspace]
members = [
    "zlink",
    "zlink-core",
    "zlink-codegen",
    "zlink-tokio",
    "zlink-macros",
    "zlink-micro",
    "zlink-usb",
]
exclude = [
    "zlink-codegen/test-crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/zeenix/zlink/"

[profile.bench]
debug = true
strip = "none"
