[workspace]
members = [
    "zlink",
    "zlink-core",
    "zlink-codegen",
    "zlink-codegen/test-integration",
    "zlink-tokio",
    "zlink-macros",
    "zlink-micro",
    "zlink-usb",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/zeenix/zlink/"

[profile.bench]
debug = true
strip = "none"
