[package]
name = "heapfull"
version = "0.1.0"
description = "An abtraction over alloc & heapless"
# Not using workspace here, because I intend to split this into a separate repo.
edition = "2021"
rust-version = "1.81"
license = "MIT"

[features]
default = ["alloc"]
alloc = []
heapless = ["dep:heapless"]

[dependencies]
heapless = { version = "0.8.0", optional = true }
