[package]
name = "zarlink"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["dep:serde_json", "memchr/std", "mayheap/alloc"]
embedded = ["dep:serde-json-core", "mayheap/heapless"]

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", features = [
    "arbitrary_precision",
], optional = true }
serde-json-core = { version = "0.6.0", default-features = false, features = [
    "heapless",
], optional = true }
mayheap = { git = "https://github.com/zeenix/mayheap", version = "0.1.0", default-features = false, features = [
    "serde",
] }
memchr = { version = "2.7.4", default-features = false }
