[package]
name = "zarlink"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "dep:serde_json",
    "memchr/std",
    "mayheap/alloc",
    "serde/std",
    "io-buffer-1mb",
]
embedded = [
    "dep:serde-json-core",
    "mayheap/heapless",
    "serde/alloc",
    "io-buffer-4kb",
]
# I/O buffer sizes: 4kb, 16kb, 64kb, 1mb (highest selected if multiple enabled).
io-buffer-4kb = []
io-buffer-16kb = []
io-buffer-1mb = []

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", features = [
    "arbitrary_precision",
], optional = true }
serde-json-core = { version = "0.6.0", default-features = false, features = [
    "heapless",
], optional = true }
mayheap = { git = "https://github.com/zeenix/mayheap", version = "0.1.0", features = [
    "serde",
], default-features = false }
memchr = { version = "2.7.4", default-features = false }
