[package]
name = "zlink-core"
version = "0.0.1-alpha.1"
description = "The core crate of the zlink project"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "io-buffer-2kb"]
std = ["dep:serde_json", "memchr/std", "mayheap/alloc", "serde/std", "tracing"]
embedded = ["dep:serde-json-core", "mayheap/heapless", "defmt"]
# I/O buffer sizes: 2kb (default), 4kb, 16kb, 64kb, 1mb (highest selected if multiple enabled).
io-buffer-2kb = []
io-buffer-4kb = []
io-buffer-16kb = []
io-buffer-1mb = []
# IDL and introspection support
idl = []
idl-parse = ["idl", "dep:winnow", "std"]
introspection = ["idl", "zlink-macros/introspection"]

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
zlink-macros = { path = "../zlink-macros", version = "0.0.1-alpha.1" }
serde_json = { version = "1.0.139", optional = true }
serde-json-core = { version = "0.6.0", default-features = false, features = [
    "heapless",
], optional = true }
mayheap = { git = "https://github.com/zeenix/mayheap", version = "0.2.0", features = [
    "serde",
], default-features = false }
memchr = { version = "2.7.4", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "async-await-macro",
] }
tracing = { version = "0.1.41", default-features = false, optional = true }
defmt = { version = "1.0.1", default-features = false, optional = true }
pin-project-lite = "0.2.16"
winnow = { version = "0.7", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
serde = { version = "1.0.218", default-features = false, features = ["alloc"] }
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
] }
