[package]
name = "zlink-core"
version = "0.1.1"
description = "The core crate of the zlink project"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "io-buffer-2kb", "proxy"]
std = [
    "dep:serde_json",
    "memchr/std",
    "mayheap/alloc",
    "serde/std",
    "tracing",
    "zlink-macros/std",
]
embedded = ["dep:serde-json-core", "mayheap/heapless", "defmt"]
proxy = ["zlink-macros/proxy"]
# I/O buffer sizes: 2kb (default), 4kb, 16kb, 64kb, 1mb (highest selected if multiple enabled).
io-buffer-2kb = []
io-buffer-4kb = []
io-buffer-16kb = []
io-buffer-1mb = []
# IDL and introspection support
idl = []
idl-parse = ["idl", "dep:winnow", "std", "zlink-macros/idl-parse"]
introspection = ["idl", "zlink-macros/introspection"]

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
zlink-macros = { path = "../zlink-macros", version = "0.1.0" }
serde_json = { version = "1.0.139", optional = true }
serde-json-core = { version = "0.6.0", default-features = false, features = [
    "heapless",
], optional = true }
mayheap = { git = "https://github.com/zeenix/mayheap", version = "0.2.0", features = [
    "serde",
], default-features = false }
memchr = { version = "2.7.4", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "async-await-macro",
] }
tracing = { version = "0.1.41", default-features = false, optional = true }
defmt = { version = "1.0.1", default-features = false, optional = true }
pin-project-lite = "0.2.16"
winnow = { version = "0.7", default-features = false, features = [
    "alloc",
], optional = true }

# Optional dependencies for external type implementations
uuid = { version = "1.0", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }
time = { version = "0.3", optional = true, default-features = false }
url = { version = "2.5", optional = true, default-features = false }
bytes = { version = "1.5", optional = true, default-features = false }
indexmap = { version = "2.2", optional = true }

[dev-dependencies]
serde = { version = "1.0.218", default-features = false, features = ["alloc"] }
serde-prefix-all = "0.1.0"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
] }
