[package]
name = "zlink-macros"
version = "0.0.1-alpha.1"
description = "Macros providing the high-level zlink API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["derive", "parsing"] }

[dev-dependencies]
zlink = { path = "../zlink", default-features = false, features = ["tokio", "idl"] }
