[package]
name = "zlink-macros"
version = "0.0.1-alpha.1"
description = "Macros providing the high-level zlink API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
default = ["proxy"]
proxy = ["syn/full", "syn/clone-impls"]
introspection = ["zlink/introspection"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }

[dev-dependencies]
zlink = { path = "../zlink", default-features = false, features = ["tokio"] }
serde = "1.0"
serde_json = "1.0"
serde-prefix-all = "0.1.0"
