[package]
name = "zlink-macros"
version = "0.1.0"
description = "Macros providing the high-level zlink API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
default = ["proxy", "std"]
proxy = ["syn/full", "syn/clone-impls"]
idl-parse = ["zlink/idl-parse"]
introspection = ["zlink/introspection"]
std = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }

[dev-dependencies]
zlink = { path = "../zlink", default-features = false, features = ["tokio"] }
serde = "1.0"
serde_json = "1.0"
serde-json-core = { version = "0.6.0", default-features = false, features = [
    "heapless",
] }
serde-prefix-all = "0.1.0"
futures-util = { version = "0.3.31", default-features = false }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "test-util",
    "rt-multi-thread",
] }
