[package]
name = "zlink-tokio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zlink-core = { path = "../zlink-core" }
tokio = { version = "1.44.0", features = ["net", "io-util", "tracing"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "alloc",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }

[dev-dependencies]
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
] }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_repr = "0.1.20"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
