[package]
name = "zlink-tokio"
version = "0.1.1"
description = "zlink library for the Tokio runtime"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
proxy = ["zlink-core/proxy"]
idl = ["zlink-core/idl"]
idl-parse = ["zlink-core/idl-parse"]
introspection = ["zlink-core/introspection"]
io-buffer-2kb = ["zlink-core/io-buffer-2kb"]
io-buffer-4kb = ["zlink-core/io-buffer-4kb"]
io-buffer-16kb = ["zlink-core/io-buffer-16kb"]
io-buffer-1mb = ["zlink-core/io-buffer-1mb"]

[dependencies]
zlink-core = { path = "../zlink-core", version = "0.1.0" }
tokio = { version = "1.44.0", features = ["net", "io-util", "tracing"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "alloc",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }

[dev-dependencies]
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
] }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_repr = "0.1.20"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
tempfile = "3.14"
