[package]
name = "zlink"
version = "0.0.1-alpha.1"
description = "Async Varlink API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:zlink-tokio"]
idl = ["zlink-tokio/idl"]
idl-parse = ["zlink-tokio/idl-parse"]
introspection = ["zlink-tokio/introspection"]

[dependencies]
zlink-tokio = { path = "../zlink-tokio", version = "0.0.1-alpha.1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
] }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_repr = "0.1.20"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
