[package]
name = "zlink"
version = "0.1.0"
description = "Async Varlink API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tokio", "proxy"]
tokio = ["dep:zlink-tokio"]
proxy = ["zlink-tokio/proxy"]
idl = ["zlink-tokio/idl"]
idl-parse = ["zlink-tokio/idl-parse"]
introspection = ["zlink-tokio/introspection"]
io-buffer-2kb = ["zlink-tokio/io-buffer-2kb"]
io-buffer-4kb = ["zlink-tokio/io-buffer-4kb"]
io-buffer-16kb = ["zlink-tokio/io-buffer-16kb"]
io-buffer-1mb = ["zlink-tokio/io-buffer-1mb"]

[dependencies]
zlink-tokio = { path = "../zlink-tokio", version = "0.1.0", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.44.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "test-util",
    "fs",
    "net",
] }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_repr = "0.1.20"
serde-prefix-all = "0.1.0"
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
    "color",
] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
tempfile = "3.8"
serde_json = "1.0"
mayheap = { git = "https://github.com/zeenix/mayheap", version = "0.2.0" }
tracing-subscriber = "0.3.19"

[[example]]
name = "varlink-inspect"
required-features = ["introspection", "idl-parse", "tokio"]

[[example]]
name = "resolved"
required-features = ["proxy", "tokio"]
